log/build_2025-02-26_15-16-10/hospital_hardware/stderr.log
  File "/home/vikash/Hospital_ws/install/hospital_hardware/lib/python3.10/site-packages/hospital_hardware/encoder.py", line 91
    pwm_value = min(int((abs(linear_x) + abs(angular_z)) * 9, 9)
                   ^
SyntaxError: '(' was never closed

